<resources>
    <string name="app_name">machineTest</string>
    <string name="go">Go</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Email</string>
    <string name="repeat_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dob">dob</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="Save">Save</string>
    <string name="hello_world">HelloWorld</string>
    <string name="inValidUserNamePassword">Invalid userName or password</string>
    <string name="doesnotexits">User Deatils Doesnt exits</string>

    <string name="firstnamemsg">First name is required.</string>
    <string name="lastnamemsg"> Last name is required.</string>
    <string name="DateofBirthmsg">Date of birth is required.</string>
    <string name="Phonemsg">Phone no must be 10 digits number.</string>
    <string name="emailerror">Invalid Email</string>
    <string name="passworderror">Invalid Password</string>
    <string name="didnotmatch">Passwords mismatch</string>
</resources>
